# Rust-GUI

./: CNAME  demo.rs  readme.md
.github/workflows/: release.yml
todo_app/: Cargo.toml  index.html  styles.css
todo_app/src/: main.rs
