[package]
name = "pomodoro_app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33.3"
log = "0.4"

# These only download for the WASM build
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement"] }
